tests/common/snapshots/short_tests__common__single_isa@gaussian7x7.snap
---
source: tests/common/mod.rs
description: generate isa for gaussian7x7
---
[
    (
        21,
        1,
        "(+ (cast<int32> (* (cast<int32> ?x0) (cast<int32> 4))) (cast<int32> ?x1))",
    ),
    (
        42,
        1,
        "(+ (cast<int32x128> (call[widen_right_mul] (cast<int32x128> (get ?#13 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?x0) (cast<int32> 128))) (cast<int32> ?x1))) (cast<int32> 1) (cast<int32> 128))))) (cast<int16x128> (call[x128] (cast<int16> 6))))) (cast<int32x128> (+ (cast<int32x128> (get ?#14 (cast<unknownx128> (call[ramp] (cast<unknown> ?x2) (cast<int32> 1) (cast<int32> 128))))) (cast<int32x128> (+ (cast<int32x128> (call[widen_right_mul] (cast<int32x128> (get ?#15 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?x0) (cast<int32> 128))) (cast<int32> ?x3))) (cast<int32> 1) (cast<int32> 128))))) (cast<int16x128> (call[x128] (cast<int16> 15))))) (cast<int32x128> (+ (cast<int32x128> (call[widen_right_mul] (cast<int32x128> (get ?#16 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?x0) (cast<int32> 128))) (cast<int32> ?x4))) (cast<int32> 1) (cast<int32> 128))))) (cast<int16x128> (call[x128] (cast<int16> 20))))) (cast<int32x128> (+ (cast<int32x128> (call[widen_right_mul] (cast<int32x128> (get ?#17 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?x0) (cast<int32> 128))) (cast<int32> ?x5))) (cast<int32> 1) (cast<int32> 128))))) (cast<int16x128> (call[x128] (cast<int16> 15))))) (cast<int32x128> (+ (cast<int32x128> (get ?#18 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?x0) (cast<int32> 128))) (cast<int32> ?x6))) (cast<int32> 1) (cast<int32> 128))))) (cast<int32x128> (call[widen_right_mul] (cast<int32x128> (get ?#19 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?x0) (cast<int32> 128))) (cast<int32> ?x7))) (cast<int32> 1) (cast<int32> 128))))) (cast<int16x128> (call[x128] (cast<int16> 6))))))))))))))))",
    ),
    (
        45,
        1,
        "(+ (cast<int32x128> (call[widening_add] (cast<int16x128> (call[widening_mul] (cast<uint8x128> (get ?#6 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (+ ?x0 ?x1)) (cast<int32> (neg (cast<int32> 3))))) (cast<int32> 1) (cast<int32> 128))))) (cast<int8x128> (call[x128] (cast<int8> 6))))) (cast<int16x128> (call[widening_mul] (cast<uint8x128> (get ?#7 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (+ ?x2 ?x3)) (cast<int32> (neg (cast<int32> 3))))) (cast<int32> 1) (cast<int32> 128))))) (cast<int8x128> (call[x128] (cast<int8> 15))))))) (cast<int32x128> (call[widening_add] (cast<int16x128> (call[widening_mul] (cast<uint8x128> (get ?#8 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (- (cast<unknown> ?x4) (cast<int32> ?#9))) (cast<int32> (neg (cast<int32> 3))))) (cast<int32> 1) (cast<int32> 128))))) (cast<int8x128> (call[x128] (cast<int8> 20))))) (cast<int16x128> (call[widening_mul] (cast<uint8x128> (get ?#10 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (- (cast<unknown> ?x4) (cast<int32> (+ (cast<int32> ?#11) (cast<int32> ?#12))))) (cast<int32> (neg (cast<int32> 3))))) (cast<int32> 1) (cast<int32> 128))))) (cast<int8x128> (call[x128] (cast<int8> 15))))))))",
    ),
    (
        57,
        1,
        "(+ (cast<int32x128> ?x0) (cast<int32x128> (call[widening_add] (cast<int16x128> (call[widening_mul] (cast<uint8x128> (get ?#4 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> ?x1) (cast<int32> (neg (cast<int32> 3))))) (cast<int32> 1) (cast<int32> 128))))) (cast<int8x128> (call[x128] (cast<int8> ?x2))))) (cast<int16x128> ?x3))))",
    ),
    (
        93,
        1,
        "(+ (cast<unknown> (* (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?#1) (cast<int32> 32))) (cast<int32> (* (cast<int32> ?#2) (cast<int32> (+ (cast<int32> ?#3) (cast<int32> ?#4))))))) (cast<int32> 4))) (cast<int32> (- (cast<int32> ?x0) (cast<int32> ?#5))))",
    ),
    (
        101,
        1,
        "(+ (cast<unknown> (* (cast<unknown> ?x0) (cast<int32> 128))) (cast<int32> 128))",
    ),
    (
        102,
        1,
        "(+ (cast<unknown> (* (cast<unknown> ?x0) (cast<int32> 128))) (cast<int32> 256))",
    ),
    (
        103,
        1,
        "(+ (cast<unknown> (* (cast<unknown> ?x0) (cast<int32> 128))) (cast<int32> 384))",
    ),
    (
        110,
        1,
        "(+ (cast<unknown> ?x0) (cast<int32> 1))",
    ),
    (
        111,
        1,
        "(+ (cast<unknown> ?x0) (cast<int32> 3))",
    ),
    (
        113,
        1,
        "(+ (cast<unknown> ?x0) (cast<int32> (neg (cast<int32> ?x1))))",
    ),
    (
        114,
        1,
        "(+ (cast<unknown> ?x0) (cast<int32> ?x1))",
    ),
    (
        122,
        1,
        "(+ ?x0 (cast<int32> (neg (cast<int32> 3))))",
    ),
    (
        136,
        1,
        "(- (cast<int32> ?x0) (cast<int32> ?x1))",
    ),
    (
        148,
        1,
        "(* (cast<int32> (+ (cast<int32> ?x0) (cast<int32> 1))) (cast<int32> ?x1))",
    ),
    (
        149,
        1,
        "(* (cast<int32> (+ (cast<int32> ?x0) (cast<int32> 2))) (cast<int32> ?x1))",
    ),
    (
        150,
        1,
        "(* (cast<int32> (+ (cast<int32> ?x0) (cast<int32> 3))) (cast<int32> ?x1))",
    ),
    (
        151,
        1,
        "(* (cast<int32> (+ (cast<int32> ?x0) (cast<int32> ?x1))) (cast<int32> ?x2))",
    ),
    (
        154,
        1,
        "(* (cast<int32> ?x0) (cast<int32> 4))",
    ),
    (
        156,
        1,
        "(* (cast<int32> ?x0) (cast<int32> (neg (cast<int32> 2))))",
    ),
    (
        157,
        1,
        "(* (cast<int32> ?x0) (cast<int32> (neg (cast<int32> 3))))",
    ),
    (
        165,
        1,
        "(* (cast<unknown> (/ (cast<unknown> (+ (cast<unknown> ?#1) (cast<int32> 127))) (cast<int32> 128))) (cast<int32> ?x0))",
    ),
    (
        182,
        1,
        "(== ?#0 ?#1)",
    ),
    (
        195,
        1,
        "(get ?#1 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (+ (cast<int32> (- (cast<int32> ?x0) (cast<int32> ?#2))) (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?#3) (cast<int32> 128))) (cast<int32> (* (cast<int32> (+ (cast<int32> (* (cast<int32> (+ (cast<int32> ?#4) (cast<int32> ?#5))) (cast<int32> 4))) (cast<int32> 1))) (cast<int32> ?#6))))))) (cast<int32> (neg (cast<int32> 3))))) (cast<int32> 1) (cast<int32> 128))))",
    ),
    (
        196,
        1,
        "(get ?#1 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (+ (cast<int32> (- (cast<int32> ?x0) (cast<int32> ?#2))) (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?#3) (cast<int32> 128))) (cast<int32> (* (cast<int32> (+ (cast<int32> (* (cast<int32> (+ (cast<int32> ?#4) (cast<int32> ?#5))) (cast<int32> 4))) (cast<int32> 2))) (cast<int32> ?#6))))))) (cast<int32> (neg (cast<int32> 3))))) (cast<int32> 1) (cast<int32> 128))))",
    ),
    (
        197,
        1,
        "(get ?#1 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (+ (cast<int32> (- (cast<int32> ?x0) (cast<int32> ?#2))) (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?#3) (cast<int32> 128))) (cast<int32> (* (cast<int32> (+ (cast<int32> (* (cast<int32> (+ (cast<int32> ?#4) (cast<int32> ?#5))) (cast<int32> 4))) (cast<int32> 3))) (cast<int32> ?#6))))))) (cast<int32> (neg (cast<int32> 3))))) (cast<int32> 1) (cast<int32> 128))))",
    ),
    (
        24,
        2,
        "(+ (cast<int32> ?x0) (cast<int32> 3))",
    ),
    (
        96,
        2,
        "(+ (cast<unknown> (* (cast<unknown> (/ (cast<unknown> (+ (cast<unknown> ?#1) (cast<int32> 127))) (cast<int32> 128))) (cast<int32> 2))) (cast<unknown> ?x0))",
    ),
    (
        97,
        2,
        "(+ (cast<unknown> (* (cast<unknown> (/ (cast<unknown> (+ (cast<unknown> ?#1) (cast<int32> 127))) (cast<int32> 128))) (cast<int32> 3))) (cast<unknown> ?x0))",
    ),
    (
        115,
        2,
        "(+ (cast<unknown> ?x0) (cast<unknown> (/ (cast<unknown> (+ (cast<unknown> ?#1) (cast<int32> 127))) (cast<int32> 128))))",
    ),
    (
        130,
        2,
        "(- (cast<int32> (* (cast<int32> ?x0) (cast<int32> 3))) (cast<int32> ?x1))",
    ),
    (
        132,
        2,
        "(- (cast<int32> (* (cast<int32> ?x0) (cast<int32> (neg (cast<int32> 2))))) (cast<int32> ?x1))",
    ),
    (
        133,
        2,
        "(- (cast<int32> (* (cast<int32> ?x0) (cast<int32> (neg (cast<int32> 3))))) (cast<int32> ?x1))",
    ),
    (
        167,
        2,
        "(* (cast<unknown> ?x0) (cast<int32> 128))",
    ),
    (
        176,
        2,
        "(/ (cast<unknown> (+ (cast<unknown> ?x0) (cast<int32> ?x1))) (cast<int32> ?x2))",
    ),
    (
        201,
        2,
        "(get ?#1 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (+ (cast<unknown> (* (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?#2) (cast<int32> 32))) (cast<int32> (* (cast<int32> ?#3) (cast<int32> (+ (cast<int32> ?#4) (cast<int32> ?#5))))))) (cast<int32> 4))) (cast<int32> (- (cast<int32> ?x0) (cast<int32> ?#6))))) (cast<int32> (neg (cast<int32> 3))))) (cast<int32> 1) (cast<int32> 128))))",
    ),
    (
        27,
        3,
        "(+ (cast<int32x128> (+ (cast<int32x128> (call[widening_add] (cast<int16x128> (call[widening_mul] (cast<uint8x128> (get ?#6 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (+ (cast<int32> (- (cast<int32> (* (cast<int32> ?#7) (cast<int32> 2))) (cast<int32> ?#8))) (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?#9) (cast<int32> 128))) (cast<int32> (* (cast<int32> (+ (cast<int32> (* (cast<int32> (+ (cast<int32> ?#10) (cast<int32> ?#11))) (cast<int32> 4))) (cast<int32> ?x0))) (cast<int32> ?#12))))))) (cast<int32> (neg (cast<int32> 3))))) (cast<int32> 1) (cast<int32> 128))))) (cast<int8x128> (call[x128] (cast<int8> 6))))) (cast<int16x128> (call[widening_mul] (cast<uint8x128> (get ?#13 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (+ (cast<int32> (- (cast<int32> ?#14) (cast<int32> ?#15))) (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?#16) (cast<int32> 128))) (cast<int32> (* (cast<int32> (+ (cast<int32> (* (cast<int32> (+ (cast<int32> ?#17) (cast<int32> ?#18))) (cast<int32> 4))) (cast<int32> ?x0))) (cast<int32> ?#19))))))) (cast<int32> (neg (cast<int32> 3))))) (cast<int32> 1) (cast<int32> 128))))) (cast<int8x128> (call[x128] (cast<int8> 15))))))) (cast<int32x128> (call[widening_add] (cast<int16x128> (call[widening_mul] (cast<uint8x128> (get ?#20 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (- (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?#21) (cast<int32> 128))) (cast<int32> (* (cast<int32> (+ (cast<int32> (* (cast<int32> (+ (cast<int32> ?#22) (cast<int32> ?#23))) (cast<int32> 4))) (cast<int32> ?x0))) (cast<int32> ?#24))))) (cast<int32> ?#25))) (cast<int32> (neg (cast<int32> 3))))) (cast<int32> 1) (cast<int32> 128))))) (cast<int8x128> (call[x128] (cast<int8> 20))))) (cast<int16x128> (call[widening_mul] (cast<uint8x128> (get ?#26 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (- (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?#27) (cast<int32> 128))) (cast<int32> (* (cast<int32> (+ (cast<int32> (* (cast<int32> (+ (cast<int32> ?#28) (cast<int32> ?#29))) (cast<int32> 4))) (cast<int32> ?x0))) (cast<int32> ?#30))))) (cast<int32> (+ (cast<int32> ?#31) (cast<int32> ?#32))))) (cast<int32> (neg (cast<int32> 3))))) (cast<int32> 1) (cast<int32> 128))))) (cast<int8x128> (call[x128] (cast<int8> 15))))))))) (cast<int32x128> (call[widening_add] (cast<int16x128> (call[widening_mul] (cast<uint8x128> (get ?#33 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (+ (cast<int32> (- (cast<int32> (* (cast<int32> ?#34) (cast<int32> (neg (cast<int32> 2))))) (cast<int32> ?#35))) (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?#36) (cast<int32> 128))) (cast<int32> (* (cast<int32> (+ (cast<int32> (* (cast<int32> (+ (cast<int32> ?#37) (cast<int32> ?#38))) (cast<int32> 4))) (cast<int32> ?x0))) (cast<int32> ?#39))))))) (cast<int32> (neg (cast<int32> 3))))) (cast<int32> 1) (cast<int32> 128))))) (cast<int8x128> (call[x128] (cast<int8> 6))))) (cast<int16x128> (call[int16x128] (cast<uint8x128> (get ?#40 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (+ (cast<int32> (- (cast<int32> (* (cast<int32> ?#41) (cast<int32> (neg (cast<int32> 3))))) (cast<int32> ?#42))) (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?#43) (cast<int32> 128))) (cast<int32> (* (cast<int32> (+ (cast<int32> (* (cast<int32> (+ (cast<int32> ?#44) (cast<int32> ?#45))) (cast<int32> 4))) (cast<int32> ?x0))) (cast<int32> ?#46))))))) (cast<int32> (neg (cast<int32> 3))))) (cast<int32> 1) (cast<int32> 128))))))))))",
    ),
    (
        43,
        3,
        "(+ (cast<int32x128> (call[widen_right_mul] (cast<int32x128> (get ?#14 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?x0) (cast<int32> 128))) (cast<int32> ?x1))) (cast<int32> 1) (cast<int32> 128))))) (cast<int16x128> (call[x128] (cast<int16> 6))))) (cast<int32x128> (+ (cast<int32x128> (get ?#15 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?x0) (cast<int32> 128))) (cast<int32> ?x2))) (cast<int32> 1) (cast<int32> 128))))) (cast<int32x128> (+ (cast<int32x128> (call[widen_right_mul] (cast<int32x128> (get ?#16 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?x0) (cast<int32> 128))) (cast<int32> ?x3))) (cast<int32> 1) (cast<int32> 128))))) (cast<int16x128> (call[x128] (cast<int16> 15))))) (cast<int32x128> (+ (cast<int32x128> (call[widen_right_mul] (cast<int32x128> (get ?#17 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?x0) (cast<int32> 128))) (cast<int32> ?x4))) (cast<int32> 1) (cast<int32> 128))))) (cast<int16x128> (call[x128] (cast<int16> 20))))) (cast<int32x128> (+ (cast<int32x128> (call[widen_right_mul] (cast<int32x128> (get ?#18 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?x0) (cast<int32> 128))) (cast<int32> ?x5))) (cast<int32> 1) (cast<int32> 128))))) (cast<int16x128> (call[x128] (cast<int16> 15))))) (cast<int32x128> (+ (cast<int32x128> (get ?#19 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?x0) (cast<int32> 128))) (cast<int32> ?x6))) (cast<int32> 1) (cast<int32> 128))))) (cast<int32x128> (call[widen_right_mul] (cast<int32x128> (get ?#20 (cast<unknownx128> (call[ramp] (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?x0) (cast<int32> 128))) (cast<int32> ?x7))) (cast<int32> 1) (cast<int32> 128))))) (cast<int16x128> (call[x128] (cast<int16> 6))))))))))))))))",
    ),
    (
        104,
        3,
        "(+ (cast<unknown> (* (cast<unknown> ?x0) (cast<int32> 128))) (cast<int32> ?x1))",
    ),
    (
        129,
        3,
        "(- (cast<int32> (* (cast<int32> ?x0) (cast<int32> 2))) (cast<int32> ?x1))",
    ),
    (
        131,
        3,
        "(- (cast<int32> (* (cast<int32> ?x0) (cast<int32> 5))) (cast<int32> ?x1))",
    ),
    (
        177,
        3,
        "(/ ?x0 (cast<int32> 4))",
    ),
    (
        25,
        4,
        "(+ (cast<int32> ?x0) (cast<int32> ?x1))",
    ),
    (
        153,
        4,
        "(* (cast<int32> ?x0) (cast<int32> 3))",
    ),
    (
        161,
        4,
        "(* (cast<unknown> (+ (cast<unknown> (* (cast<unknown> ?x0) (cast<int32> 32))) (cast<int32> ?x1))) (cast<int32> 4))",
    ),
    (
        175,
        4,
        "(/ (cast<int32> (+ (cast<int32> ?x0) (cast<int32> ?x1))) (cast<int32> ?x2))",
    ),
    (
        159,
        5,
        "(* (cast<int32> ?x0) (cast<int32> ?x1))",
    ),
]
