tests/common/snapshots/short_tests__common__single_isa@l2norm.snap
---
source: tests/common/mod.rs
description: generate isa for l2norm
---
[
    (
        6,
        1,
        "(+ (cast<int32> (* (cast<int32> ?x0) (cast<int32> 128))) (cast<int32> ?x1))",
    ),
    (
        8,
        1,
        "(+ (cast<int32> (* (cast<int32> ?x0) (cast<int32> ?#3))) (cast<int32> (- (cast<int32> (- (cast<int32> ?#4) (cast<int32> ?x1))) (cast<int32> ?x2))))",
    ),
    (
        9,
        1,
        "(+ (cast<int32> (* (cast<int32> ?#2) (cast<int32> 128))) (cast<int32> (+ (cast<int32> (* (cast<int32> ?x0) (cast<int32> ?#3))) (cast<int32> ?x1))))",
    ),
    (
        14,
        1,
        "(- (cast<int32> (* (cast<int32> ?x0) (cast<int32> ?x1))) (cast<int32> ?#2))",
    ),
    (
        15,
        1,
        "(- (cast<int32> ?x0) (cast<int32> ?x1))",
    ),
    (
        16,
        1,
        "(- (cast<int32> ?x0) ?x1)",
    ),
    (
        17,
        1,
        "(- ?x0 (cast<int16> ?x1))",
    ),
    (
        20,
        1,
        "(* (cast<int32> ?x0) (cast<int32> 128))",
    ),
    (
        24,
        1,
        "(/ (cast<int32> ?x0) (cast<int32> ?x1))",
    ),
    (
        27,
        1,
        "(\"%\" (cast<int32> ?x0) (cast<int32> ?x1))",
    ),
    (
        34,
        1,
        "(get ?x0 (cast<int32> ?x1))",
    ),
    (
        37,
        1,
        "(get ?#3 (cast<int32x128> (call[ramp] (cast<int32> (+ (cast<int32> (* (cast<int32> ?x0) (cast<int32> ?x1))) (cast<int32> ?x2))) (cast<int32> 1) (cast<int32> 128))))",
    ),
    (
        0,
        2,
        "(neg (cast<int32> ?x0))",
    ),
    (
        2,
        2,
        "(+ (cast<int16> (call[rounding_mul_shift_right] (cast<int16> ?x0) (cast<int16> ?x1) (cast<uint16> 15))) (cast<int16> (+ (cast<int16> (call[rounding_mul_shift_right] (cast<int16> ?x2) (cast<int16> ?x3) (cast<uint16> 15))) (cast<int16> (call[rounding_mul_shift_right] (cast<int16> ?x4) (cast<int16> (call[rounding_mul_shift_right] (cast<int16> ?x1) (cast<int16> ?x3) (cast<uint16> 15))) (cast<uint16> 15))))))",
    ),
    (
        5,
        2,
        "(+ (cast<int16> ?x0) (cast<int16> ?x1))",
    ),
    (
        7,
        2,
        "(+ (cast<int32> (* (cast<int32> ?x0) (cast<int32> ?x1))) (cast<int32> ?x2))",
    ),
    (
        13,
        2,
        "(- (cast<int32> (- (cast<int32> ?x0) (cast<int32> ?x1))) (cast<int32> ?x2))",
    ),
    (
        21,
        2,
        "(* (cast<int32> ?x0) (cast<int32> ?x1))",
    ),
    (
        23,
        2,
        "(/ (cast<int32> ?x0) (cast<int32> 128))",
    ),
    (
        26,
        2,
        "(\"%\" (cast<int32> ?x0) (cast<int32> 128))",
    ),
    (
        30,
        2,
        "(<= ?#0 ?#1)",
    ),
    (
        31,
        2,
        "(!= (cast<int32> ?x0) (cast<int32> 0))",
    ),
    (
        36,
        2,
        "(get ?#2 (cast<int32x128> (call[ramp] (cast<int32> (+ (cast<int32> (* (cast<int32> ?x0) (cast<int32> 128))) (cast<int32> ?x1))) (cast<int32> 1) (cast<int32> 128))))",
    ),
    (
        12,
        3,
        "(- (cast<int32> 0) (cast<int32> ?x0))",
    ),
    (
        19,
        3,
        "(* (cast<int32> (call[int32] (cast<int16> ?x0))) (cast<int32> ?x1))",
    ),
    (
        33,
        5,
        "(get ?x0 (cast<int32> 0))",
    ),
    (
        10,
        11,
        "(+ (cast<int32> ?x0) (cast<int32> ?x1))",
    ),
]
