tests/common/snapshots/short_tests__common__single_isa@matmul.snap
---
source: tests/common/mod.rs
description: generate isa for matmul
---
(
    MinimalIsa {
      0: (neg (cast<int32> ?x0))
      68: (+ ?x0 ?x1)
      70: (- ?x0 (cast<unknown> ?x1))
      100: (* ?x0 ?x1)
      107: (/ ?x0 (cast<int32> ?x1))
      112: (<= ?x0 ?x1)
      116: (== (cast<int32> ?#0) (cast<int32> ?#1))
      117: (&& (cast<bool> ?#0) (cast<bool> ?#1))
      118: (:: ?#0 ?#1)
      123: (get
             ?x0
             (cast<int32x128>
               (call[ramp] (cast<int32> ?x1) (cast<int32> 1) (cast<int32> 128)))
             (cast<bool>
               (<=
                 (cast<int32x128>
                   (call[ramp]
                     (cast<int32>
                       (+ (cast<int32> (* (cast<int32> ?#2) (cast<int32> 128))) (cast<int32> 1)))
                     (cast<int32> 1)
                     (cast<int32> 128)))
                 (cast<unknownx128>
                   (call[x128]
                     (cast<unknown>
                       (* (cast<unknown> (/ (cast<unknown> ?#3) (cast<int32> 128))) (cast<int32> 128))))))))
      128: (get ?x0 ?x1)
    }
    ,
    [
        (
            i117,
            1,
            "(&& (cast<bool> ?#0) (cast<bool> ?#1))",
        ),
        (
            i0,
            2,
            "(neg (cast<int32> ?x0))",
        ),
        (
            i116,
            3,
            "(== (cast<int32> ?#0) (cast<int32> ?#1))",
        ),
        (
            i123,
            3,
            "(get ?x0 (cast<int32x128> (call[ramp] (cast<int32> ?x1) (cast<int32> 1) (cast<int32> 128))) (cast<bool> (<= (cast<int32x128> (call[ramp] (cast<int32> (+ (cast<int32> (* (cast<int32> ?#2) (cast<int32> 128))) (cast<int32> 1))) (cast<int32> 1) (cast<int32> 128))) (cast<unknownx128> (call[x128] (cast<unknown> (* (cast<unknown> (/ (cast<unknown> ?#3) (cast<int32> 128))) (cast<int32> 128))))))))",
        ),
        (
            i70,
            5,
            "(- ?x0 (cast<unknown> ?x1))",
        ),
        (
            i118,
            6,
            "(:: ?#0 ?#1)",
        ),
        (
            i112,
            7,
            "(<= ?x0 ?x1)",
        ),
        (
            i107,
            33,
            "(/ ?x0 (cast<int32> ?x1))",
        ),
        (
            i128,
            65,
            "(get ?x0 ?x1)",
        ),
        (
            i68,
            108,
            "(+ ?x0 ?x1)",
        ),
        (
            i100,
            131,
            "(* ?x0 ?x1)",
        ),
    ],
)
