tests/common/snapshots/short_tests__common__single_isa@max_pool.snap
---
source: tests/common/mod.rs
description: generate isa for max_pool
---
[
    (
        0,
        1,
        "(neg (cast<int32> ?x0))",
    ),
    (
        5,
        2,
        "(+ (cast<int32> ?#1) (cast<int32> (neg (cast<int32> ?x0))))",
    ),
    (
        19,
        3,
        "(/ (cast<int32> (+ (cast<int32> ?#2) (cast<int32> ?x0))) (cast<int32> ?x1))",
    ),
    (
        22,
        3,
        "(<= (cast<int32> ?x0) (cast<int32> ?#1))",
    ),
    (
        24,
        3,
        "(get ?x0 (cast<int32> ?x1))",
    ),
    (
        25,
        3,
        "(get ?x0 (cast<int32x128> (call[ramp] (cast<int32> ?x1) (cast<int32> 1) (cast<int32> 128))))",
    ),
    (
        26,
        3,
        "(get ?x0 (cast<int32x256> (call[ramp] (cast<int32> ?x1) (cast<int32> 1) (cast<int32> 256))))",
    ),
    (
        27,
        3,
        "(get ?x0 (cast<int32x512> (call[ramp] (cast<int32> ?x1) (cast<int32> 1) (cast<int32> 512))))",
    ),
    (
        7,
        8,
        "(- (cast<int32> (- (cast<int32> (- (cast<int32> (- (cast<int32> ?#5) (cast<int32> (* (cast<int32> ?#6) (cast<int32> ?x0))))) (cast<int32> (* (cast<int32> ?x1) (cast<int32> ?x2))))) (cast<int32> (* (cast<int32> ?x3) (cast<int32> ?x4))))) (cast<int32> ?#7))",
    ),
    (
        12,
        8,
        "(- (cast<int32> (call[max] (cast<int32> ?x0) (cast<int32> 0))) (cast<int32> ?x1))",
    ),
    (
        14,
        16,
        "(- (cast<int32> ?x0) (cast<int32> ?x1))",
    ),
    (
        17,
        35,
        "(* (cast<int32> ?x0) (cast<int32> ?x1))",
    ),
    (
        4,
        69,
        "(+ (cast<int32> ?x0) (cast<int32> ?x1))",
    ),
]
