tests/common/snapshots/short_tests__common__single_isa@mean.snap
---
source: tests/common/mod.rs
description: generate isa for mean
---
(
    BestIsa {
      33: (+ ?x0 ?x1)
      44: (- (cast<int32> ?x0) (cast<int32> ?x1))
      49: (* (cast<int32> ?x0) (cast<int32> ?x1))
      53: (/ ?x0 ?x1)
      54: (% (cast<int32> ?#0) (cast<int32> ?#1))
      55: (<= ?x0 ?x1)
      56: (!= (cast<int32> ?#0) (cast<int32> ?#1))
      57: (get
            ?x0
            (cast<int32x128>
              (call[ramp] (cast<int32> ?x1) (cast<int32> 1) (cast<int32> 128))))
      58: (get
            ?x0
            (cast<int32x128>
              (call[ramp] (cast<int32> ?x1) (cast<int32> 1) (cast<int32> 128)))
            (cast<bool>
              (<=
                (cast<int32x128>
                  (call[ramp]
                    (cast<int32>
                      (+
                        (cast<int32>
                          (+
                            (cast<int32> ?#2)
                            (cast<int32>
                              (* (cast<int32> (/ (cast<int32> ?#3) (cast<int32> 128))) (cast<int32> 128)))))
                        (cast<int32> 1)))
                    (cast<int32> 1)
                    (cast<int32> 128)))
                (cast<int32x128>
                  (call[x128] (cast<int32> (+ (cast<int32> ?#4) (cast<int32> ?#5))))))))
    }
    ,
    [
        (
            i54,
            2,
            "(\"%\" (cast<int32> ?#0) (cast<int32> ?#1))",
        ),
        (
            i55,
            2,
            "(<= ?x0 ?x1)",
        ),
        (
            i56,
            2,
            "(!= (cast<int32> ?#0) (cast<int32> ?#1))",
        ),
        (
            i57,
            3,
            "(get ?x0 (cast<int32x128> (call[ramp] (cast<int32> ?x1) (cast<int32> 1) (cast<int32> 128))))",
        ),
        (
            i58,
            3,
            "(get ?x0 (cast<int32x128> (call[ramp] (cast<int32> ?x1) (cast<int32> 1) (cast<int32> 128))) (cast<bool> (<= (cast<int32x128> (call[ramp] (cast<int32> (+ (cast<int32> (+ (cast<int32> ?#2) (cast<int32> (* (cast<int32> (/ (cast<int32> ?#3) (cast<int32> 128))) (cast<int32> 128))))) (cast<int32> 1))) (cast<int32> 1) (cast<int32> 128))) (cast<int32x128> (call[x128] (cast<int32> (+ (cast<int32> ?#4) (cast<int32> ?#5))))))))",
        ),
        (
            i53,
            13,
            "(/ ?x0 ?x1)",
        ),
        (
            i44,
            16,
            "(- (cast<int32> ?x0) (cast<int32> ?x1))",
        ),
        (
            i49,
            48,
            "(* (cast<int32> ?x0) (cast<int32> ?x1))",
        ),
        (
            i33,
            52,
            "(+ ?x0 ?x1)",
        ),
    ],
)
