tests/common/snapshots/short_tests__common__single_isa@mul.snap
---
source: tests/common/mod.rs
description: generate isa for mul
---
[
    (
        13,
        1,
        "(- (cast<int16x128> (call[shift_left] (cast<int16x128> (call[int16x128] (cast<uint8x128> (if (cast<uint8x128> (get ?x0 (cast<int32x128> (call[ramp] (cast<int32> (+ (cast<int32> (* (cast<int32> ?x1) (cast<int32> (+ (cast<int32> ?#8) (cast<int32> ?#9))))) (cast<int32> (- (cast<int32> (- (cast<int32> (+ (cast<int32> (* (cast<int32> (/ (cast<int32> ?#10) (cast<int32> 128))) (cast<int32> 128))) (cast<int32> ?#11))) (cast<int32> (* (cast<int32> ?x2) (cast<int32> ?x1))))) (cast<int32> ?x3))))) (cast<int32> 1) (cast<int32> 128))))) (cast<bool> (<= ?x4 ?x5)))))) (cast<uint16x128> (call[x128] (cast<uint16> 6))))) (cast<int16x128> (call[x128] (cast<int16> (* (cast<int16> (call[int16] (cast<uint8> ?x6))) (cast<int16> 64))))))",
    ),
    (
        3,
        2,
        "(+ (cast<int32> (* (cast<int32> ?x0) (cast<int32> (+ (cast<int32> ?#4) (cast<int32> ?#5))))) (cast<int32> (- (cast<int32> (- (cast<int32> (+ (cast<int32> (* (cast<int32> (/ (cast<int32> ?#6) (cast<int32> 128))) (cast<int32> 128))) (cast<int32> ?#7))) (cast<int32> (* (cast<int32> ?x1) (cast<int32> ?x0))))) (cast<int32> ?x2))))",
    ),
    (
        7,
        2,
        "(+ (cast<int32> (* (cast<int32> ?#3) (cast<int32> 128))) (cast<int32> (+ (cast<int32> (* (cast<int32> ?x0) (cast<int32> (+ (cast<int32> ?#4) (cast<int32> ?#5))))) (cast<int32> (- (cast<int32> ?x1) (cast<int32> ?x2))))))",
    ),
    (
        12,
        2,
        "(- (cast<int16x128> (call[shift_left] (cast<int16x128> (call[int16x128] (cast<uint8x128> (if (cast<uint8x128> (get ?x0 (cast<int32x128> (call[ramp] (cast<int32> (+ (cast<int32> (* (cast<int32> ?x1) (cast<int32> (+ (cast<int32> ?#6) (cast<int32> ?#7))))) (cast<int32> (- (cast<int32> (- (cast<int32> (+ (cast<int32> (* (cast<int32> (/ (cast<int32> ?#8) (cast<int32> 128))) (cast<int32> 128))) (cast<int32> ?#9))) (cast<int32> (* (cast<int32> ?x2) (cast<int32> ?x1))))) (cast<int32> ?x3))))) (cast<int32> 1) (cast<int32> 128))))) (cast<bool> (<= (cast<int32x128> (call[ramp] (cast<int32> (+ (cast<int32> (+ (cast<int32> (* (cast<int32> (/ (cast<int32> ?#10) (cast<int32> 128))) (cast<int32> 128))) (cast<int32> ?#11))) (cast<int32> 1))) (cast<int32> 1) (cast<int32> 128))) (cast<int32x128> (call[x128] (cast<int32> (+ (cast<int32> ?#12) (cast<int32> ?#13))))))))))) (cast<uint16x128> (call[x128] (cast<uint16> 6))))) (cast<int16x128> (call[x128] (cast<int16> (* (cast<int16> (call[int16] (cast<uint8> ?x4))) (cast<int16> 64))))))",
    ),
    (
        21,
        2,
        "(- (cast<int32> ?x0) (cast<int32> ?x1))",
    ),
    (
        22,
        2,
        "(- ?x0 ?x1)",
    ),
    (
        24,
        2,
        "(* (cast<int16> ?x0) (cast<int16> 64))",
    ),
    (
        30,
        2,
        "(\"%\" ?#0 ?#1)",
    ),
    (
        31,
        2,
        "(<= ?x0 ?x1)",
    ),
    (
        32,
        2,
        "(== (cast<int32> ?#1) (cast<int32> ?x0))",
    ),
    (
        34,
        2,
        "(!= ?#0 ?#1)",
    ),
    (
        41,
        2,
        "(get ?x0 ?x1)",
    ),
    (
        1,
        3,
        "(+ (cast<int32> (* (cast<int32> ?x0) (cast<int32> 128))) (cast<int32> ?x1))",
    ),
    (
        15,
        3,
        "(- (cast<int16x128> (call[shift_left] (cast<int16x128> (call[int16x128] (cast<uint8x128> (get ?x0 (cast<int32x128> (call[ramp] (cast<int32> (+ (cast<int32> (* (cast<int32> ?#6) (cast<int32> 128))) (cast<int32> (+ (cast<int32> (* (cast<int32> ?x1) (cast<int32> (+ (cast<int32> ?#7) (cast<int32> ?#8))))) (cast<int32> (- (cast<int32> (- (cast<int32> ?#9) (cast<int32> (* (cast<int32> ?x2) (cast<int32> ?x1))))) (cast<int32> ?x3))))))) (cast<int32> 1) (cast<int32> 128))))))) (cast<uint16x128> (call[x128] (cast<uint16> 6))))) (cast<int16x128> (call[x128] (cast<int16> (* (cast<int16> (call[int16] (cast<uint8> ?x4))) (cast<int16> 64))))))",
    ),
    (
        27,
        4,
        "(* (cast<int32> ?x0) (cast<int32> ?x1))",
    ),
    (
        29,
        5,
        "(/ ?#0 ?#1)",
    ),
    (
        10,
        8,
        "(+ (cast<int32> ?x0) (cast<int32> ?x1))",
    ),
]
