tests/common/snapshots/short_tests__common__single_isa@softmax.snap
---
source: tests/common/mod.rs
description: generate isa for softmax
---
[
    (
        4,
        1,
        "(+ (cast<int16> (call[rounding_mul_shift_right] (cast<int16> ?x0) (cast<int16> ?x1) (cast<uint16> 15))) (cast<int16> (+ (cast<int16> (call[rounding_mul_shift_right] (cast<int16> ?x2) (cast<int16> ?x3) (cast<uint16> 15))) (cast<int16> (call[rounding_mul_shift_right] (cast<int16> ?x4) (cast<int16> (call[rounding_mul_shift_right] (cast<int16> ?x1) (cast<int16> ?x3) (cast<uint16> 15))) (cast<uint16> 15))))))",
    ),
    (
        12,
        1,
        "(+ (cast<int32> (* (cast<int32> ?x0) (cast<int32> 128))) (cast<int32> ?x1))",
    ),
    (
        18,
        1,
        "(- (cast<int16x128> (call[shift_left] (cast<int16x128> (call[int16x128] (cast<uint8x128> ?x0))) (cast<uint16x128> (call[x128] (cast<uint16> 6))))) (cast<int16x128> (call[x128] (cast<int16> (* (cast<int16> (call[int16] (cast<uint8> (get ?#1 (cast<int32> 0))))) (cast<int16> 64))))))",
    ),
    (
        30,
        1,
        "(* (cast<int16> ?x0) (cast<int16> 64))",
    ),
    (
        33,
        1,
        "(* (cast<int32> (call[int32] (cast<int16> ?x0))) (cast<int32> ?x1))",
    ),
    (
        50,
        1,
        "(get ?#2 (cast<int32x128> (call[ramp] (cast<int32> (+ (cast<int32> (* (cast<int32> ?x0) (cast<int32> 128))) (cast<int32> ?x1))) (cast<int32> 1) (cast<int32> 128))))",
    ),
    (
        51,
        1,
        "(get ?#3 (cast<int32x128> (call[ramp] (cast<int32> (+ (cast<int32> (* (cast<int32> ?x0) (cast<int32> ?x1))) (cast<int32> ?x2))) (cast<int32> 1) (cast<int32> 128))))",
    ),
    (
        0,
        2,
        "(neg (cast<int32> ?x0))",
    ),
    (
        2,
        2,
        "(+ (cast<int16> (call[rounding_mul_shift_right] (cast<int16> 7363) (cast<int16> ?x0) (cast<uint16> 15))) (cast<int16> (+ (cast<int16> (call[rounding_mul_shift_right] (cast<int16> 22812) (cast<int16> ?x1) (cast<uint16> 15))) (cast<int16> (call[rounding_mul_shift_right] (cast<int16> 2592) (cast<int16> (call[rounding_mul_shift_right] (cast<int16> ?x0) (cast<int16> ?x1) (cast<uint16> 15))) (cast<uint16> 15))))))",
    ),
    (
        13,
        2,
        "(+ (cast<int32> (* (cast<int32> ?x0) (cast<int32> ?x1))) (cast<int32> ?x2))",
    ),
    (
        16,
        2,
        "(- (cast<int16> ?x0) (cast<int16> ?x1))",
    ),
    (
        17,
        2,
        "(- (cast<int16x128> (call[shift_left] (cast<int16x128> (call[int16x128] (cast<uint8x128> (get ?#2 (cast<int32x128> (call[ramp] (cast<int32> (+ (cast<int32> (* (cast<int32> ?x0) (cast<int32> 128))) (cast<int32> ?x1))) (cast<int32> 1) (cast<int32> 128))))))) (cast<uint16x128> (call[x128] (cast<uint16> 6))))) (cast<int16x128> (call[x128] (cast<int16> (* (cast<int16> (call[int16] (cast<uint8> (get ?#3 (cast<int32> 0))))) (cast<int16> 64))))))",
    ),
    (
        22,
        2,
        "(- (cast<int32> (- (cast<int32> ?x0) (cast<int32> ?x1))) (cast<int32> ?x2))",
    ),
    (
        23,
        2,
        "(- (cast<int32> (* (cast<int32> ?x0) (cast<int32> ?x1))) (cast<int32> ?#2))",
    ),
    (
        24,
        2,
        "(- (cast<int32> ?x0) (cast<int16> ?x1))",
    ),
    (
        32,
        2,
        "(* (cast<int32> (call[int32] (cast<int16> ?x0))) (cast<int32> 32768))",
    ),
    (
        34,
        2,
        "(* (cast<int32> ?x0) (cast<int32> 128))",
    ),
    (
        35,
        2,
        "(* (cast<int32> ?x0) (cast<int32> ?x1))",
    ),
    (
        37,
        2,
        "(/ (cast<int32> ?x0) (cast<int32> 128))",
    ),
    (
        38,
        2,
        "(/ (cast<int32> ?x0) (cast<int32> ?x1))",
    ),
    (
        40,
        2,
        "(\"%\" (cast<int32> ?x0) (cast<int32> 128))",
    ),
    (
        43,
        2,
        "(<= ?#0 ?#1)",
    ),
    (
        44,
        2,
        "(!= (cast<int32> ?x0) (cast<int32> 0))",
    ),
    (
        49,
        2,
        "(get ?#2 (cast<int32> (+ (cast<int32> ?x0) (cast<int32> ?x1))))",
    ),
    (
        8,
        3,
        "(+ (cast<int16x128> (call[rounding_mul_shift_right] (cast<int16x128> (call[x128] (cast<int16> 7363))) (cast<int16x128> ?x0) (cast<uint16x128> (call[x128] (cast<uint16> 15))))) (cast<int16x128> (+ (cast<int16x128> (call[rounding_mul_shift_right] (cast<int16x128> (call[x128] (cast<int16> 22812))) (cast<int16x128> ?x1) (cast<uint16x128> (call[x128] (cast<uint16> 15))))) (cast<int16x128> (call[rounding_mul_shift_right] (cast<int16x128> (call[x128] (cast<int16> 2592))) (cast<int16x128> (call[rounding_mul_shift_right] (cast<int16x128> ?x0) (cast<int16x128> ?x1) (cast<uint16x128> (call[x128] (cast<uint16> 15))))) (cast<uint16x128> (call[x128] (cast<uint16> 15))))))))",
    ),
    (
        11,
        3,
        "(+ (cast<int32> (* (cast<int32> (+ (cast<int32> ?#1) (cast<int32> ?#2))) (cast<int32> ?#3))) (cast<int32> ?x0))",
    ),
    (
        19,
        3,
        "(- (cast<int16x128> ?x0) (cast<int16x128> (call[shift_left] (cast<int16x128> ?x1) (cast<uint16x128> (call[x128] (cast<uint16> ?#2))))))",
    ),
    (
        25,
        3,
        "(- (cast<int32> ?x0) (cast<int32> ?x1))",
    ),
    (
        7,
        4,
        "(+ (cast<int16> ?x0) (cast<int16> ?x1))",
    ),
    (
        21,
        4,
        "(- (cast<int32> 0) (cast<int32> ?x0))",
    ),
    (
        46,
        8,
        "(get ?x0 (cast<int32> 0))",
    ),
    (
        14,
        10,
        "(+ (cast<int32> ?x0) (cast<int32> ?x1))",
    ),
]
